<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="app_name">F.A.P. App</string>
<string name="action_settings">Settings</string>
<string name="EnterFapTitle">Welcome to the FAP App</string>
<string name="Password">Password</string>
<string name="FirstName">First Name</string>
<string name="LastName">Last Name</string>
<string name="BackToLogin">Back to login</string>
<string name="Login">Login</string>
<string name="App">Login Screen</string>
<string name="LoginStatus">Login Status</string>
<string name="LoginRole">Login Role</string>
<string name="Status">Not login</string>
<string name="Role">Not assigned</string>
<string name="method">Login Method</string>
<string name="Choose">Choose Method</string>
<string name="ForgotPassword">Forgot Password</string>
<string name="Register">Register</string>
<string name="Email">Email</string>
<string name="RegisterTitle">Register so you can be awesome too</string>
<string name="BacktoLogin">Back to Login</string>
<string name="RegisteredAt">Registered at</string>
<string name="RegDetails">Your Registration Details</string>
<string name="Congrats">Congratulations, you have registered</string>
<string name="ResetPass">Reset Your Password</string>
<string name="EnterEmail">Enter your Email Id</string>
<string name="Reset">Reset</string>
<string name="LogoutBtnTitle">Logout</string>
<string name="Cancel">Cancel</string>
<string name="mapBtnTitle">Map of Henson</string>
<string name="Mentor">Mentor/Mentee</string>
<string name="backToETFTitle">back</string>
<string name="question">Click "Next Question" Button</string>
<string name="NextQuestion">Next Question</string>
<string name="answer1">A</string>
<string name="answer2">B</string>
<string name="answer3">C</string>
<string name="answer4">D</string>
<string name="TriviaTitle">Trivia Game</string>
<string name="Trivia">Trivia</string>
<string name="Question">Question:</string>
<string name="Answer">Answer:</string>
<string name="Info">Info</string>
<string name="Close">Close</string>
<string name="Description">\n 101: Lounge \n 105: Computer Lab \n 117: Tutoring Room \n Food: Sandwiches and snacks!</string>
</resources>