<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/userNameField"
        android:layout_below="@+id/userNameField"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <EditText
        android:id="@+id/userNameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="44dp"
        android:ems="10" >

        <requestFocus android:layout_width="wrap_content" />
    </EditText>

    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userNameField"
        android:layout_alignParentLeft="true"
        android:text="@string/Username" />

    <TextView
        android:id="@+id/loginPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/App"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordField"
        android:layout_alignBottom="@+id/passwordField"
        android:layout_alignParentLeft="true"
        android:text="@string/Password" />

    <TextView
        android:id="@+id/loginStatusField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginRoleField"
        android:layout_alignLeft="@+id/loginRoleField"
        android:text="@string/Status" />

    <TextView
        android:id="@+id/loginRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="34dp"
        android:text="@string/LoginRole" />

    <TextView
        android:id="@+id/loginRoleField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginRole"
        android:layout_alignBottom="@+id/loginRole"
        android:layout_alignRight="@+id/passwordField"
        android:text="@string/Role"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/loginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginStatusField"
        android:layout_alignBottom="@+id/loginStatusField"
        android:layout_alignParentLeft="true"
        android:text="@string/LoginStatus" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:text="@string/Register"
        android:textColor="#000000" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passwordField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:onClick="login"
        android:text="@string/Login" />

    <Button
        android:id="@+id/login"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_below="@+id/registerbtn"
        android:layout_centerHorizontal="true"
        android:text="@string/ForgotPassword"
        android:textColor="#000000" />

</RelativeLayout>