<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/passResetTitle"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ResetPass"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/enterEmailLabel"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_below="@+id/passResetTitle"
        android:layout_centerHorizontal="true"
        android:text="@string/EnterEmail"
        android:textSize="@dimen/title_text_size" />

    <EditText
        android:id="@+id/forpas"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/enterEmailLabel"
        android:hint="@string/Email" />

    <Button
        android:id="@+id/resetpassbtn"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/forpas"
        android:text="@string/Reset"
        android:textSize="@dimen/label_text_size" />

    <TextView
        android:id="@+id/alert"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/respass" />

    <Button
        android:id="@+id/bktolog"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/forpas"
        android:text="@string/BacktoLogin"
        android:textSize="@dimen/label_text_size" />

</RelativeLayout>