<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/RegisterTitle"
        android:textSize="@dimen/title_text_size"
         />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView"
        android:text="@string/FirstName"
        />

    <EditText
        android:id="@+id/fname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView2"
        android:hint="@string/FirstName"
         />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView2"
        android:layout_toLeftOf="@+id/lname"
        android:text="@string/LastName" />

    <EditText
        android:id="@+id/lname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView3"
        android:hint="@string/LastName"
        />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:text="@string/Email"
         />

    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lname"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
         />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:text="@string/Mentor" />

    <EditText
        android:id="@+id/mentor"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5"
        
         />

    <EditText
        android:id="@+id/pword"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/mentor"
        android:layout_below="@+id/textView5"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
         />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="125dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignTop="@+id/pword"
        android:text="@string/Password"
        android:textColor="#000000" />

    <Button
        android:id="@+id/register"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignRight="@+id/textView2"
        android:layout_below="@+id/textView6"
        android:text="@string/Register"
        android:textColor="#000000" />

    <Button
        android:id="@+id/bktologin"
        android:layout_width="175dp"
        android:layout_height="40dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pword"
        android:text="@string/BackToLogin"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/register_error"
        android:layout_width="fill_parent"
        android:layout_height="56dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/register"
        android:textColor="#000000" />

</RelativeLayout>