<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/Congrats"
            android:textColor="#000000"
            android:id="@+id/textView" android:layout_gravity="center"
            android:textAlignment="center"/>
    <TextView
            android:layout_width="200dp"
            android:textColor="#000000"
            android:layout_height="40dp"
            android:text="@string/RegDetails"
            android:id="@+id/textView2"
           
            android:layout_centerHorizontal="true"/>
    <TextView
            android:layout_width="125dp"
            android:textColor="#000000"
            android:layout_height="40dp"
            android:text="@string/FirstName"
            android:id="@+id/textView3"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
           />

    <TextView
        android:id="@+id/fname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="#000000" />

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/LastName"
            android:textColor="#000000"
            android:id="@+id/textView5"
            android:layout_below="@+id/textView3"
            android:textSize="@dimen/standard_text_size"
            android:layout_toLeftOf="@+id/fname"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/lname"
            android:textColor="#000000"
            android:layout_below="@+id/textView3"
            android:layout_toRightOf="@+id/textView5"
            android:textSize="@dimen/standard_text_size"/>
    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/Email"
            android:textColor="#000000"
            android:id="@+id/textView7"
            android:layout_below="@+id/textView5"
            android:layout_toLeftOf="@+id/textView2"
            android:textSize="@dimen/standard_text_size"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/email"
            android:textColor="#000000"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/fname"
            android:textSize="@dimen/standard_text_size"/>
    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/Email"
            android:textColor="#000000"
            android:id="@+id/textView9"
            android:layout_below="@+id/textView7"
            android:textSize="@dimen/standard_text_size"
            android:textIsSelectable="false"/>

    <TextView
        android:id="@+id/uname"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textColor="#000000"
        android:textSize="@dimen/standard_text_size" />

    <TextView
            android:layout_width="125dp"
            android:layout_height="40dp"
            android:text="@string/RegisteredAt"
            android:id="@+id/textView11"
            android:textColor="#000000"
            android:layout_below="@+id/textView9"
            android:layout_toLeftOf="@+id/uname"
            android:textSize="@dimen/standard_text_size"/>
    <TextView
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:id="@+id/regat"
            android:textColor="#000000"
            android:layout_below="@+id/textView9"
            android:layout_alignRight="@+id/lname"
            android:textSize="@dimen/standard_text_size"/>
    <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/BacktoLogin"
            android:id="@+id/login"
            android:textColor="#000000"
            android:layout_below="@+id/textView11"
            android:textSize="@dimen/label_text_size"
            android:layout_alignRight="@+id/lname"
            android:layout_alignParentLeft="true"/>

</RelativeLayout>
